# if2023_rust_samples

pico-blink-rs/: .gitignore  Cargo.toml  Embed.toml
pico-blink-rs/.cargo/: config.toml
pico-blink-rs/src/: main.rs
rp2040_cdc/: Cargo.toml
rp2040_cdc/src/: main.rs
rp2040_cmsis_dap/: Cargo.toml
rp2040_cmsis_dap/src/: cmsis_dap.rs  main.rs  swdio.rs
