[package]
name = "pico-blink-rs"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
rp-pico = { git = "https://github.com/rp-rs/rp-hal.git", rev = "8d18abdfc7c0129debba85457d32d32175bf36bd" }
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.6", features = ["unproven"]}
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
