[package]
name = "rp2040_cmsis_dap"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2
codegen-units = 1
opt-level = 3

[dependencies]
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp-pico = "0.6"

usb-device = { version = "0.2", features = ["control-buffer-256"]}
nb = "0.1"
heapless = "0.7"
embedded-hal = { version = "0.2.6", features = ["unproven"]}
embedded-time = "0.12"
num_enum = { version = "0.5.7", default-features = false }
